# webview2

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
Microsoft.Web.WebView2.0.9.430/: .signature.p7s  Microsoft.Web.WebView2.0.9.430.nupkg  WebView2.idl  WebView2.tlb
Microsoft.Web.WebView2.0.9.488/: Microsoft.Web.WebView2.0.9.488.nupkg  WebView2.idl
Microsoft.Web.WebView2.0.9.579/: .signature.p7s  WebView2.idl  WebView2.tlb
Microsoft.Web.WebView2.0.9.622.11/: Microsoft.Web.WebView2.0.9.622.11.nupkg  WebView2.tlb
examples/: background.rs  background_color.rs  capture-preview.rs  download-and-run-bootstrapper.ps1  host-web-communication.rs  native-windows-gui.rs  user_agent.rs  win32.rs  winit.rs
idl2rs/: Cargo.toml
idl2rs/src/: idl.pest  main.rs
src/: interfaces.rs  lib.rs  sys.rs
webview2-sys/: Cargo.toml  build.rs
webview2-sys/Microsoft.Web.WebView2.0.9.622.11/: .signature.p7s  WebView2.idl
webview2-sys/Microsoft.Web.WebView2.1.0.622.22/: .signature.p7s  Microsoft.Web.WebView2.1.0.622.22.nupkg  WebView2.idl
webview2-sys/Microsoft.Web.WebView2.1.0.790-prerelease/: WebView2.idl  WebView2Experimental.idl
webview2-sys/Microsoft.Web.WebView2.1.0.818.41/: .signature.p7s  WebView2.idl  WebView2.tlb
webview2-sys/Microsoft.Web.WebView2.1.0.961.33/: .signature.p7s
webview2-sys/Microsoft.Web.Webview2.1.0.790-prerelease/: Microsoft.Web.WebView2.nuspec
webview2-sys/idl2rs/: Cargo.toml
webview2-sys/idl2rs/src/: idl.pest  main.rs
webview2-sys/src/: lib.rs
