[package]
name = "webview2"
version = "0.1.0-alpha.2"
authors = ["Yin Guanhao <sopium@mysterious.site>"]
edition = "2018"
license = "MIT"
description = "Rust bindings for WebView2"
repository = "https://github.com/sopium/webview2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = [
    "combaseapi",
    "libloaderapi",
    # For SHCreateMemStream.
    "shellapi",
] }
widestring = "0.4.0"
com = "0.2.0"
memory-module-sys = "0.3.0"
once_cell = "1.3.1"

[dev-dependencies]
winit = "0.20.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-gnu"
targets = ["x86_64-pc-windows-gnu"]
