[package]
name = "webview2"
version = "0.1.4"
authors = ["Yin Guanhao <sopium@mysterious.site>"]
edition = "2018"
license = "MIT"
description = "Rust bindings for WebView2"
repository = "https://github.com/sopium/webview2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[dependencies]
winapi = { version = "0.3.8", features = [
    "combaseapi",
    # For SHCreateMemStream.
    "shellapi",
    "winerror",
] }
widestring = "0.5.0"
com = "0.2.0"
once_cell = "1.3.1"
webview2-sys = { path = "./webview2-sys", version = "0.1.0" }

[dev-dependencies]
winit = "0.24.0"
native-windows-gui = { version = "1.0.4", features = ["high-dpi"] }
winapi = { version = "0.3.9", features = ["libloaderapi"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
