[package]
name = "webview2-sys"
version = "0.1.0-beta.1"
authors = ["Yin Guanhao <sopium@mysterious.site>"]
edition = "2018"
license = "MIT"
description = "Low Level Bindings for WebView2 SDK"
repository = "https://github.com/sopium/webview2"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = [
    "combaseapi",
    # WebView2LoaderStatic.lib needs to link to functions from these:
    "winver",
    "shellapi",
] }
com = "0.2.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
